@@ -448,9 +448,8 @@ ext_api.storage.local.get({
     } else {
       ext_api.management.getSelf(function (result) {
         if ((result.installType === 'development' || (result.installType !== 'development' && !enabledSites.includes('#options_on_update')))) {
-          let new_groups = ['###_ch_esh_medias', '###_it_gruppo_sae', '###_nl_eu_ftm'];
-          let open_options = new_groups.some(group => !enabledSites.includes(group) && grouped_sites[group].some(domain => enabledSites.includes(domain) && !customSites_domains.includes(domain))) ||
-            (enabledSites.includes('tinypass.com') && !enabledSites.includes('piano.io'));
+          let new_groups = ['###_ch_esh_medias', '###_nl_eu_ftm'];
+          let open_options = new_groups.some(group => !enabledSites.includes(group) && grouped_sites[group].some(domain => enabledSites.includes(domain) && !customSites_domains.includes(domain)));
           if (open_options)
             ext_api.runtime.openOptionsPage();
         }
