@@ -740,5 +740,5 @@
     "*://*.wyleex.com/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.2.4.5"
+  "version": "3.2.4.6"
 }
